--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@
     --cor-primaria: #000000;
     --cor-secundaria: #F6F6F6;
     --cor-terciaria: #22D4FD;
+    --cor-quarta: #FFC077;
     --cor-hover: #272727;
 
     --fonte-primaria: 'Krona One', sans-serif;
     --fonte-secundaria: 'Montserrat', sans-serif;
 }
 
-* { 
+ { 
     margin: 0;
     padding: 0;
 }
@@ -45,6 +46,38 @@ body {
     justify-content: space-between;
 }
 
+.container {
+    padding: 4% 4%;
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.container img {
+    width: 00px;
+}
+
+.primeira-secao {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item {
+    display: flex;
+    margin: 10px;
+    width: 48%;
+    gap: 35px;
+    justify-content: space-between;
+}
+
+.item p {
+    width: 50%;
+    font-size: 24px;
+    font-family: var(--fonte-secundaria);
+
+}
+
 .apresentacao_conteudo {
     width: 615px;
     display: flex;
@@ -55,24 +88,40 @@ body {
 .apresentacao_conteudo_titulo {
     font-size: 36px;
     font-family: var(--fonte-primaria);
+    gap: 20px;
 }
  
 .form-image {
-    width: 70%;
+    width: 50%;
     display: flex;
-    justify-content: safe;
     border-radius: 50px;
     gap: 15px;
-    align-items: center;
     background-color: var(--cor-terciaria);
-    padding: 1rem;   
+    padding: 1rem;
+}
+
+.form-image-gestao {
+    width: 50%;
+    display: flex;
+    border-radius: 50px;
+    gap: 15px;
+    background-color: var(--cor-quarta);
+    padding: 1rem;
 }
 
 .form-image img {
-    width: 31rem;
+    width: 25rem;
     flex-direction: row;
     border-radius: 30px;
     box-shadow: 1px 1px 6px var(--cor-terciaria);
+}
+
+.form-image-gestao img {
+    width: 25rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 30px;
+    box-shadow: 1px 1px 6px var(--cor-quarta);
 }
 
 .titulo-destaque {
