--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
     --cor-terciaria: #22D4FD;
     --cor-quarta: #FFC077;
     --cor-quinta: #F77E70;
+    --cor-sexta: #25D48A;
+    --cor-setima: #21385D;
     --cor-hover: #272727;
 
     --fonte-primaria: 'Krona One', sans-serif;
@@ -66,17 +68,18 @@ body {
 
 .item {
     display: flex;
-    margin: 10px;
+    margin: 2px;
     width: 48%;
-    gap: 35px;
+    gap: 10px;
     justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .item p {
-    width: 50%;
+    width: 90%;
     font-size: 24px;
     font-family: var(--fonte-secundaria);
-
 }
 
 .apresentacao_conteudo {
@@ -93,7 +96,7 @@ body {
 }
  
 .form-image {
-    width: 50%;
+    width: 38%;
     display: flex;
     border-radius: 50px;
     gap: 15px;
@@ -102,7 +105,7 @@ body {
 }
 
 .form-image-gestao {
-    width: 50%;
+    width: 42%;
     display: flex;
     border-radius: 50px;
     gap: 15px;
@@ -111,7 +114,7 @@ body {
 }
 
 .form-image-redes {
-    width: 50%;
+    width: 42%;
     display: flex;
     border-radius: 50px;
     gap: 15px;
@@ -119,11 +122,31 @@ body {
     padding: 1rem;
 }
 
-.form-image img {
-    width: 25rem;
-    flex-direction: row;
-    border-radius: 30px;
-    box-shadow: 1px 1px 6px var(--cor-terciaria);
+.form-image-cloud {
+    width: 125%;
+    display: flex;
+    border-radius: 50px;
+    gap: 15px;
+    background-color: var(--cor-setima);
+    padding: 1rem;
+}
+
+.form-image-dev {
+    width: 42%;
+    display: flex;
+    border-radius: 50px;
+    gap: 15px;
+    background-color: var(--cor-sexta);
+    padding: 1rem;
+}
+
+.form-image-front {
+    width: 42%;
+    display: flex;
+    border-radius: 50px;
+    gap: 15px;
+    background-color: var(--cor-terciaria);
+    padding: 1rem;
 }
 
 .form-image-gestao img {
@@ -131,7 +154,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     border-radius: 30px;
-    box-shadow: 1px 1px 6px var(--cor-quarta);
+    box-shadow: 1px 1px 6px var(--cor-setima);
 }
 
 .form-image-redes img {
@@ -140,6 +163,30 @@ body {
     flex-wrap: wrap;
     border-radius: 30px;
     box-shadow: 1px 1px 6px var(--cor-quarta);
+}
+
+.form-image-cloud img {
+    width: 25rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 30px;
+    box-shadow: 1px 1px 6px var(--cor-terciaria);
+}
+
+.form-image-dev img {
+    width: 25rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 30px;
+    box-shadow: 1px 1px 6px var(--cor-sexta);
+}
+
+.form-image-front img {
+    width: 25rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 30px;
+    box-shadow: 1px 1px 6px var(--cor-terciaria);
 }
 
 .titulo-destaque {
