--- a/css/style.css
+++ b/css/style.css
@@ -80,19 +80,20 @@ body {
     width: 90%;
     font-size: 24px;
     font-family: var(--fonte-secundaria);
+    justify-content: left;
 }
 
 .apresentacao_conteudo {
     width: 615px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
 }
 
 .apresentacao_conteudo_titulo {
     font-size: 36px;
     font-family: var(--fonte-primaria);
-    gap: 20px;
+    gap: 5px;
 }
  
 .form-image {
